<resources>
    <string name="app_name">Art Store</string>
    <string name="Welcome">Bienvenido</string>
    <string name="Intro">Art Store es una aplicación ideal para exponer tus obras y ponerlas a la venta.
        Sirve para darte a conocer y ponerte en contacto con compradores, que no es poco.
        Si llegas a un acuerdo con un comprador, deberás acordar la forma de pago y envío, y ya sabes cuál es la mejor.</string>
    <string name="Start">Empezar</string>
    <string name="name_app_login">Art Store</string>
    <string name="user_name">Usuario / email</string>
    <string name="user_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="textlogin">Login</string>
    <string name="textregister">Registro</string>
    <string name="fullname">Nombre Completo</string>
    <string name="btn_register">Crear Cuenta</string>
    <string name="link_register">Crear una cuenta</string>
    <string name="no_results">No se encontraron resultados para mostrar</string>
    <string name="Text_Intro_One">Tienda de arte unico - ArtS compra entre un rango de pinturas unicas realizadas por grandes artistas de internet.</string>
    <string name="Title_Intro_One">Tienda Online</string>
    <string name="Title_Intro_Two">Agregalas al carro de compra</string>
    <string name="Text_Intro_Two">Añadelas en el boton de carro de compras. Las personalizaciones de esta sección son compatibles con los botones de pago dinámicos.</string>
    <string name="Title_Intro_Three">Sube tus propias pinturas</string>
    <string name="Text_Intro_Three">Cuando subes tus propias pinturas puedes asignarles el precio o subastarlas.</string>
    <string name="Btn_Dialog_Box">Aceptar</string>

    // Strings adicionales

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_phone_auth">Phone Authentication</string>
    <string name="label_manage_user">Manage User</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo">Photo URL</string>

    <string name="logout">Logout?</string>
    <string name="anonymous_signin">Anonymous Sign In</string>
    <string name="account_link">Account Linking</string>
    <string name="account_link_btn">Link Account</string>
    <string name="title_provider">User\'s provider</string>
    <string name="title_profile">User\'s profile</string>
    <string name="title_update_profile">Update user\'s profile</string>
    <string name="title_update_email">Update user\'s email</string>
    <string name="title_update_password">Update user\'s password</string>
    <string name="title_send_password_reset">Send password reset</string>
    <string name="title_delete_user">Delete a user</string>
    <string name="updated">%s updated.</string>
    <string name="verify">Verify</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="search">Buscar</string>
    <string name="email">Correo</string>
    <string name="facebook">Facebook</string>
    <string name="exit">Salir</string>
</resources>