<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/CustomRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#292929"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/GifLogo"
            android:layout_width="match_parent"
            android:layout_height="267dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_animado_art_store" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:id="@+id/email_password_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="180dp"
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/email_password_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_fields"
        android:orientation="horizontal">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:layout_marginEnd="10dp"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:id="@+id/email_create_account_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:layout_marginStart="10dp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signout_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/verify_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sign_out_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

    </LinearLayout>

</RelativeLayout>